# repo

./: .gitignore  .lilaclib.py  .travis.yml  CONTRIBUTING.md  README.md  axionl  backend.txt  backend_backup.txt  changes.txt  check.py  chromium-canary  class.md  console.js  contribution.txt  dummy.txt  frontend.txt  index.HTML  lilac-yaml-schema.yaml  nautilus-dropbox  notes.md  nvchecker.ini  parse-pkgbuild  pre-commit  pre-hook  printpkgenv.sh  pyside-python3  temp.java
.github/: ISSUE_TEMPLATE.md
115wangpan/: PKGBUILD  lilac.py
1password-cli/: PKGBUILD  lilac.yaml
3to2/: PKGBUILD  lilac.yaml
abiword-gtk2/: .SRCINFO  PKGBUILD  enchant-2.patch
abootimg-git/: PKGBUILD  lilac.yaml
acme.sh-git/: PKGBUILD  lilac.py  lilac.yaml
acpi_call-pf/: PKGBUILD  acpi_call-pf.install
acroread/: PKGBUILD  acroread.desktop  nppdf.bsdiff
acroread-fonts/: PKGBUILD
acroread-fonts-systemwide/: PKGBUILD  acroread-fonts-systemwide.install
adapta-gtk-theme/: Makefile  PKGBUILD
adlmidi-git/: PKGBUILD  lilac.yaml
advancecomp/: PKGBUILD
aha-git/: PKGBUILD
alacritty-git/: PKGBUILD  lilac.py  lilac.yaml
alarmcn/: .gitignore
albert/: PKGBUILD
alert-after/: PKGBUILD  lilac.yaml
aliedit/: PKGBUILD
alsi/: PKGBUILD  lilac.yaml
amarok/: PKGBUILD  amarok.install  lilac.yaml
amdgpu-pro-installer/: 0001-disable-firmware-copy.patch  0002-fix-warnings-for-Werror.patch  20-amdgpu.conf  PKGBUILD  amdgpu-pro.install
amule-dlp-git/: PKGBUILD  amuled.systemd  amuleweb.systemd  crypto++.patch  lilac.yaml
anaconda/: PKGBUILD  conda_install.patch  install.py.patch  installer_sh_x86.patch  installer_sh_x86_64.patch  lilac.yaml  upgrade_helper.sh
anbox-git/: PKGBUILD  anbox-bridge.netdev  anbox-bridge.network  anbox-container-manager.service  anbox-session-manager.service  boost.patch  lilac.yaml
anbox-image/: PKGBUILD  lilac.yaml
android-apktool/: PKGBUILD  lilac.py  lilac.yaml
android-docs/: PKGBUILD
android-emulator/: PKGBUILD  android-emulator.csh  lilac.yaml
android-ndk/: PKGBUILD  android-ndk.install  android-ndk.sh  lilac.py  lilac.yaml
android-ndk-beta/: PKGBUILD  android-ndk-beta.install  android-ndk-beta.sh  lilac.yaml
android-platform/: PKGBUILD  lilac.py  lilac.yaml
android-qt5-armeabi-v7a/: JavaScriptCore.pri.patch  Misc.cpp.patch  PKGBUILD  imageformats.pro.patch  lilac.py  qglobal.h.patch  src.pro.patch
android-sdk/: PKGBUILD  android-sdk.csh  android-sdk.desktop  android-sdk.sh  lilac.py
android-sdk-build-tools/: PKGBUILD
android-sdk-platform-tools/: PKGBUILD  android-sdk-platform-tools.install  lilac.yaml  source.properties
android-studio/: PKGBUILD  android-studio.desktop  android-studio.install  lilac.yaml
android-support/: .SRCINFO  PKGBUILD  lilac.py  lilac.yaml  source.properties
android-support-repository/: PKGBUILD  lilac.py
android-udev/: PKGBUILD  android-udev.install
angrysearch/: .SRCINFO  PKGBUILD  lilac.yaml
annie/: PKGBUILD  lilac.yaml
antimicro/: PKGBUILD  lilac.yaml
anydesk/: PKGBUILD  lilac.yaml
anything-sync-daemon/: PKGBUILD  lilac.yaml
apache-lucene/: PKGBUILD  lilac.yaml
apache-tools/: PKGBUILD  apache-tools-Makefile.patch  lilac.yaml
apfs-fuse-git/: PKGBUILD  lilac.yaml
apm_planner/: PKGBUILD  lilac.yaml
apparmor/: PKGBUILD  apparmor.install  lilac.py
appmenu-gtk/: PKGBUILD  (+2 more)
archlinuxcn/kwin-effects-sliding-notifications-russh-git/: CMakeLists.txt  PKGBUILD  lilac.yaml
archlinuxcn/lodepng/: CMakeLists.txt  PKGBUILD  lilac.yaml
archlinuxcn/plasma-applet-uswitch/: CMakeLists.txt  PKGBUILD  lilac.yaml
(+24796 files in other folders)
